# proprioceptive-recalibration

./: .gitignore  README.md  pyproject.toml
configs/: batch.yaml  concat_summaries.yaml  concat_summaries_var.yaml  example.yaml  vibration-align.yaml  vibration-target.yaml  visual-align.yaml  visual-target.yaml
reports/: all_configs_recalibration_summary.jasp
scripts/: concat_summaries.py  main.py
src/prop_recal/: io.py  plotting.py  preprocess.py  stats.py
src/prop_recal/pipelines/: combined_fig.py  recalibration.py  run.py  trial_curves.py
tests/: test_smoke.py
